fixed minor spacing issue on the contact form date/time inputs

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -711,6 +711,7 @@ animation: orange-glow  5s ease-in-out infinite alternate;
   height: 2em;
   border-radius: 5px;
   padding: 0 0.5em;
+  margin: 0;
   font-size: 1.25em;
 }
 
